[metadata]
name = fancyladder
version = 1.0.0
author = James Pan
author-email = panjiabang@gmail.com
summary = Awesome Configuration Generator for Ladders
description-file = README.md
home-page = https://github.com/JamesPan/oh-my-ladder
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils
[files]
packages =
    fancyladder
[entry_points]
console_scripts =
    ladder = fancyladder.cmd:main
